hphp/test/vm/dv_ca.php.expectf
HipHop Fatal error: Default value for parameter a0 with type Array needs to have the same type as the type hint C in %s on line 4
